--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,11 +5,25 @@ body {
     font-weight: normal;
 }
 
+/* HEADINGS */
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: white;
 }
+
+.header--secondary {
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+
+.header--subheader {
+    font-size: 21px;
+    color: gray;
+}
+/* LINKS */
 
 .link--cta {
     font-size: 16px;
